--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stripe": "^18.3.0"
   }
 }
